--- a/test/communication/CMakeLists.txt
+++ b/test/communication/CMakeLists.txt
@@ -42,12 +42,12 @@ get_property(targets DIRECTORY "${CMAKE_CURRENT_LIST_DIR}" PROPERTY BUILDSYSTEM_
 foreach(tgt ${targets})
   get_target_property(target_type ${tgt} TYPE)
   if (target_type STREQUAL "EXECUTABLE")
-    target_link_libraries(${tgt} ${CMAKE_THREAD_LIBS_INIT} testlib GTest::gtest GTest::gtest_main) 
     if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-        target_link_libraries(${tgt} gcov)
+        target_link_libraries(${tgt} ${ASAN_LIB} ${GCOV_LIB})
     elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
         target_link_libraries(${tgt} Ws2_32)
     endif()
+    target_link_libraries(${tgt} ${CMAKE_THREAD_LIBS_INIT} testlib GTest::gtest GTest::gtest_main)
 
     set_target_properties(${tgt} PROPERTIES
       LINK_FLAGS "${EXTRA_LINK_FLAGS}"
