--- a/test/string/CMakeLists.txt
+++ b/test/string/CMakeLists.txt
@@ -19,10 +19,10 @@ get_property(targets DIRECTORY "${CMAKE_CURRENT_LIST_DIR}" PROPERTY BUILDSYSTEM_
 foreach(tgt ${targets})
   get_target_property(target_type ${tgt} TYPE)
   if (target_type STREQUAL "EXECUTABLE")
-    target_link_libraries(${tgt} ${CMAKE_THREAD_LIBS_INIT} testlib GTest::gtest GTest::gtest_main) 
     if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-        target_link_libraries(${tgt} gcov)
+      target_link_libraries(${tgt} ${ASAN_LIB} ${GCOV_LIB})
     endif()
+    target_link_libraries(${tgt} ${CMAKE_THREAD_LIBS_INIT} testlib GTest::gtest GTest::gtest_main)
 
     set_target_properties(${tgt} PROPERTIES
       LINK_FLAGS "${EXTRA_LINK_FLAGS}"
